# effective-octo-guacamole

./: .gitignore  README.md  convert_bom.py  gen_proc.py  justfile  odd_batches.md  push_prd.py  pyproject.toml  tabdel.py  test.xml  transports.py  webauto.md
.helix/: ignore
boomi/: 1 Demand.bru  2 Inventory.bru  3 Feedback.bru  4 Execute.bru  bruno.json  collection.bru
cadcam-ui/: README.md  ecosystem.config.js  package.json
client/: .prettierrc  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
comm/: Cargo.toml
comm/src/: lib.rs  main.rs
comm/src/feedback/: mod.rs  nest.rs  part.rs  program.rs  remnant.rs  sheet.rs
comm/src/interfaces/: demand.rs  execution.rs  inventory.rs  mod.rs  nest.rs
heatswap/: .gitignore  Cargo.toml  justfile
heatswap/src/: cleanup.rs  heatswap.rs  lib.rs  main.rs
schema/: .gitignore  CodeDeliverySystem.sql  CopyDemandFrom91.sql  CopyInvFrom91.sql  Debug_1-Demand.sql  Debug_2-Inventory.sql  Debug_3-Feedback.sql  Debug_4-Update.sql  GetFeedback.sql  OysSchema.sql  PulledCode.sql  README_migration.md  SapInter_CdsProc.sql  SapInter_DebugProc.sql  SapInter_HssSchema.sql  SapInter_LogsSchema.sql  SapInter_Migrations.sql  SapInter_Proc.sql  SapInter_Views.sql  SigmanestInterface.ssmssln  SigmanestInterface.ssmssqlproj  SimTransCtrl_Proc.sql  Uninstall.sql  clone_prd_wo.sql  export-prod.sql  export_sqlserver_data.py  gen_proc.py  (+9 more)
server/: Cargo.toml  batches.csv
server/src/: batch.rs  db.rs  exports.rs  lib.rs  main.rs
server/src/db/: exports.rs  mod.rs  pool.rs
server/src/db/api/: feedback.rs  mod.rs  nest.rs  part.rs  program.rs  remnant.rs  sheet.rs
(+54 files in other folders)
