[package]
name = "comm"
description = "Communication interface for Sigmanest"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
bb8 = "0.8.3"
bb8-tiberius = "0.15.0"
fern = "0.6.2"
humantime = "2.1.0"
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.63"
tiberius = { version = "0.12.3", features = ["sql-browser-tokio", "integrated-auth-gssapi"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "net"] }
tokio-util = { version = "0.7.11", features = ["compat"] }
