[package]
name = "sigmanest-interface"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros", "net", "sync"] }
bb8 = "0.8.3"
bb8-tiberius = "0.15.0"
tokio-util = { version = "0.7.11", features = ["compat"] }
tiberius = { version = "0.12.2", features = ["sql-browser-tokio", "integrated-auth-gssapi"] }
log = "0.4.21"
fern = "0.6.2"
humantime = "2.1.0"
anyhow = "1.0.86"
